Implementação do comportamento do menu durante a rotação do dispositivo.

--- a/app/src/main/res/drawable/ic_clear_42.xml
+++ b/app/src/main/res/drawable/ic_clear_42.xml
@@ -1,5 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="42dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="42dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2L18,7L6,7v12zM8.46,11.88l1.41,-1.41L12,12.59l2.12,-2.12 1.41,1.41L13.41,14l2.12,2.12 -1.41,1.41L12,15.41l-2.12,2.12 -1.41,-1.41L10.59,14l-2.13,-2.12zM15.5,4l-1,-1h-5l-1,1L5,4v2h14L19,4z"/>
-    
+<?xml version="1.0" encoding="utf-8"?>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="100dp"
+    android:height="100dp"
+    android:viewportWidth="100"
+    android:viewportHeight="100">
+
+    <path
+        android:fillColor="#272626"
+        android:pathData="M51.4,26.47l-2.39,6.14l-1.05,2.71l-2.39,6.14l-2.06,5.3l-2.97,7.62l-0.96,2.47 c-2.03,5.22,0.56,11.13,5.78,13.16l20.31,7.91c-19.75,0-39.51,0-59.26,0c-2.54,0-2.55,3.95,0,3.95c16.65,0,83.06,0.01,83.17,0l0,0 c0,0-0.88-1.25-2.1-2.37c-0.61-0.56-1-0.78-1.37-0.72c-0.2,0.03-0.31,0.14-0.65,0.17c-0.3,0.02-0.52-0.03-0.61-0.06 c-0.75-0.19-0.87-0.74-1.39-0.83c-0.44-0.08-0.77,0.24-1.06,0.41c-0.59,0.35-1.66,0.48-3.75-0.55c0.75-0.55,1.76-1.44,2.6-2.78 c0.34-0.54,0.63-1.11,0.87-1.72l0.96-2.47l0.23,0.09l5.03-12.92l0.78-2.02l1.61-4.12l1.05-2.71l2.39-6.14l3.65-9.37L55.04,17.1 L51.4,26.47z M79.92,72.55c-1.56,4.01-6.09,5.99-10.09,4.43l-23.61-9.19c-4.01-1.56-5.99-6.09-4.44-10.09l0.96-2.47l38.13,14.85 L79.92,72.55z M81.97,67.95L43.61,53.02l2.11-5.41l2.06-5.3l38.36,14.93L81.97,67.95z M86.99,55.04L48.64,40.1l0.67-1.72 l38.36,14.93L86.99,55.04z M88.53,51.11L50.17,36.17l1.05-2.71L89.58,48.4L88.53,51.11z M90.44,46.19L52.08,31.26l0.67-1.72 l38.36,14.93L90.44,46.19z M94.76,35.11l-2.79,7.15L53.61,27.33l2.79-7.16L94.76,35.11z" />
 </vector>
