--- a/app/src/main/res/drawable/ic_list.xml
+++ b/app/src/main/res/drawable/ic_list.xml
@@ -1,5 +1,17 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M2,17h2v0.5L3,17.5v1h1v0.5L2,19v1h3v-4L2,16v1zM3,8h1L4,4L2,4v1h1v3zM2,11h1.8L2,13.1v0.9h3v-1L3.2,13L5,10.9L5,10L2,10v1zM7,5v2h14L21,5L7,5zM7,19h14v-2L7,17v2zM7,13h14v-2L7,11v2z"/>
-    
+<?xml version="1.0" encoding="utf-8"?>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="100dp"
+    android:height="100dp"
+    android:viewportWidth="100"
+    android:viewportHeight="100">
+
+    <path
+        android:fillColor="#272626"
+        android:pathData="M14.87,76.27v14.12c0,4.02,3.27,7.29,7.29,7.29h2.46c4.02,0,7.29-3.27,7.29-7.29V76.27 c2.29-0.87,3.93-3.09,3.93-5.68v-1.86c0-2.59-1.64-4.81-3.93-5.68V9.89c0-4.02-3.27-7.29-7.29-7.29h-2.46 c-4.02,0-7.29,3.27-7.29,7.29v53.16c-2.29,0.87-3.93,3.09-3.93,5.68v1.86C10.94,73.18,12.58,75.4,14.87,76.27z M22.16,7.24h2.46 c1.47,0,2.66,1.19,2.66,2.66v52.76H19.5V9.89C19.5,8.43,20.69,7.24,22.16,7.24z M15.57,68.73c0-0.78,0.66-1.45,1.45-1.45h12.73 c0.79,0,1.45,0.67,1.45,1.45v1.86c0,0.79-0.66,1.45-1.45,1.45H17.02c-0.79,0-1.45-0.66-1.45-1.45V68.73z M24.62,93.04h-2.46 c-1.47,0-2.66-1.19-2.66-2.66V76.67h7.78v13.71C27.28,91.85,26.09,93.04,24.62,93.04z" />
+    <path
+        android:fillColor="#272626"
+        android:pathData="M41.15,55.35v35.03c0,4.02,3.27,7.29,7.29,7.29h2.46c4.02,0,7.29-3.27,7.29-7.29V55.17 c2.16-0.93,3.68-3.09,3.68-5.59v-1.86c0-2.5-1.52-4.65-3.68-5.58V9.89c0-4.02-3.27-7.29-7.29-7.29h-2.46 c-4.02,0-7.29,3.27-7.29,7.29v32.06c-2.42,0.8-4.18,3.08-4.18,5.77v1.86C36.97,52.27,38.72,54.55,41.15,55.35z M48.44,7.24h2.46 c1.47,0,2.66,1.19,2.66,2.66v31.75h-7.78V9.89C45.78,8.43,46.97,7.24,48.44,7.24z M41.6,47.73c0-0.79,0.66-1.45,1.45-1.45h12.73 c0.79,0,1.45,0.66,1.45,1.45v1.86c0,0.78-0.67,1.45-1.45,1.45H43.05c-0.79,0-1.45-0.67-1.45-1.45V47.73z M50.89,93.04h-2.46 c-1.47,0-2.66-1.19-2.66-2.66V55.66h7.78v34.72C53.55,91.85,52.36,93.04,50.89,93.04z" />
+    <path
+        android:fillColor="#272626"
+        android:pathData="M68.36,34.76v55.63c0,4.02,3.27,7.29,7.29,7.29h2.46c4.02,0,7.29-3.27,7.29-7.29V34.76 c2.29-0.87,3.93-3.09,3.93-5.68v-1.86c0-2.59-1.64-4.81-3.93-5.68V9.89c0-4.02-3.27-7.29-7.29-7.29h-2.46 c-4.02,0-7.29,3.27-7.29,7.29v11.64c-2.29,0.87-3.93,3.09-3.93,5.68v1.86C64.43,31.67,66.07,33.88,68.36,34.76z M75.65,7.24h2.46 c1.47,0,2.66,1.19,2.66,2.66v11.24h-7.78V9.89C72.99,8.43,74.18,7.24,75.65,7.24z M69.06,27.22c0-0.79,0.66-1.45,1.45-1.45h12.73 c0.79,0,1.45,0.66,1.45,1.45v1.86c0,0.79-0.66,1.45-1.45,1.45H70.51c-0.79,0-1.45-0.66-1.45-1.45V27.22z M78.11,93.04h-2.46 c-1.47,0-2.66-1.19-2.66-2.66V35.16h7.78v55.23C80.76,91.85,79.57,93.04,78.11,93.04z" />
 </vector>
