--- a/app/src/main/res/drawable/ic_draw42.xml
+++ b/app/src/main/res/drawable/ic_draw42.xml
@@ -1,5 +1,23 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="42dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="42dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M12,6L12,6c3.33,0 6.49,1.08 9.08,3.07L12,18.17l-9.08,-9.1C5.51,7.08 8.67,6 12,6M12,4C7.31,4 3.07,5.9 0,8.98L12,21L24,8.98C20.93,5.9 16.69,4 12,4L12,4z"/>
-    
+<?xml version="1.0" encoding="utf-8"?>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="100dp"
+    android:height="100dp"
+    android:viewportWidth="100"
+    android:viewportHeight="100">
+
+    <path
+        android:fillColor="#3C3C3B"
+        android:pathData="M19.8,43.92c2.08-1.84,3.41-4.53,3.41-7.52c0-5.54-4.51-10.05-10.05-10.05 c-5.54,0-10.05,4.51-10.05,10.05c0,2.99,1.32,5.68,3.41,7.52v46.75c0,0.87,0.71,1.58,1.58,1.58h10.12c0.87,0,1.58-0.71,1.58-1.58 V43.92z M9.68,89.09V45.82c1.09,0.4,2.25,0.63,3.48,0.63c1.22,0,2.39-0.23,3.48-0.63v43.27H9.68z M13.16,29.52 c3.8,0,6.88,3.09,6.88,6.88c0,3.8-3.09,6.89-6.88,6.89c-3.8,0-6.89-3.09-6.89-6.89C6.27,32.61,9.36,29.52,13.16,29.52z" />
+    <path
+        android:fillColor="#0C70B8"
+        android:pathData="M93.34,91.96c0.47-0.78,8.51-14.5,1.33-28.35 c-5.43-10.47-15.72-13.62-17.61-14.16C58.19,62.88,39.32,76.32,20.45,89.75c-0.3,0.38-0.54,0.82-0.41,1.21c0,0,0.18,0.55,1.3,0.79 C23.34,92.18,70.81,92.04,93.34,91.96z M21.5,90.5c18.52-13.11,37.04-26.22,55.56-39.33c2.08,0.55,10.76,3.11,15.88,11.68 c4.94,8.27,4.66,18.95-0.61,27.74C68.72,90.56,45.11,90.53,21.5,90.5z" />
+    <path
+        android:fillColor="#3C3C3B"
+        android:pathData="M31.92,3.52c-0.9,0.21-1.66,0.75-2.15,1.53c-1.01,1.61-0.52,3.74,1.09,4.75 c5.94,3.71,10.02,9.52,11.49,16.35s0.15,13.8-3.73,19.63c-0.52,0.78-0.7,1.72-0.5,2.64c0.19,0.88,0.71,1.64,1.46,2.14 c0.77,0.51,1.68,0.69,2.59,0.51c0.02,0,0.03-0.01,0.05-0.01c0.88-0.19,1.64-0.71,2.14-1.46c4.92-7.39,6.6-16.24,4.73-24.9 c-1.87-8.67-7.05-16.03-14.58-20.74C33.75,3.47,32.82,3.34,31.92,3.52z M41.7,48.59c0,0-0.01,0-0.01,0c-0.24,0.05-0.48,0-0.69-0.14 c-0.2-0.13-0.34-0.33-0.39-0.57c-0.05-0.24-0.01-0.49,0.13-0.7c4.26-6.4,5.72-14.06,4.1-21.57c-1.62-7.51-6.1-13.88-12.62-17.96 c-0.43-0.27-0.56-0.84-0.29-1.26c0.13-0.21,0.33-0.35,0.57-0.41c0,0,0.01,0,0.01,0c0.23-0.05,0.47-0.01,0.68,0.12 c6.95,4.34,11.72,11.13,13.44,19.13c1.72,7.99,0.17,16.15-4.36,22.97C42.13,48.4,41.93,48.54,41.7,48.59z" />
+    <path
+        android:fillColor="#3C3C3B"
+        android:pathData="M27.71,43.5c0.22,0.86,0.75,1.6,1.5,2.08c0.78,0.49,1.7,0.65,2.6,0.45 c0.03-0.01,0.05-0.01,0.08-0.02c0.86-0.22,1.6-0.75,2.07-1.5c3.2-5.08,4.17-11.08,2.71-16.89c-1.46-5.82-5.13-10.65-10.35-13.62 c-0.8-0.46-1.73-0.57-2.62-0.33c-0.89,0.24-1.63,0.82-2.08,1.62c-0.46,0.8-0.57,1.73-0.33,2.62c0.24,0.89,0.82,1.63,1.62,2.08 c3.57,2.03,6.08,5.33,7.07,9.31c0.99,3.97,0.34,8.07-1.85,11.54C27.64,41.62,27.48,42.59,27.71,43.5z M30.28,42.17 c2.56-4.06,3.33-8.86,2.17-13.5c-1.16-4.65-4.1-8.52-8.28-10.89c-0.21-0.12-0.36-0.32-0.43-0.55c-0.06-0.24-0.03-0.48,0.09-0.69 c0.12-0.21,0.32-0.37,0.55-0.43c0.01,0,0.01,0,0.02-0.01c0.23-0.06,0.47-0.03,0.67,0.09c4.61,2.62,7.86,6.9,9.15,12.04 c1.29,5.14,0.44,10.44-2.39,14.93c-0.13,0.21-0.32,0.35-0.57,0.4c-0.24,0.05-0.49,0.01-0.69-0.12c-0.2-0.13-0.34-0.32-0.4-0.55 C30.1,42.64,30.14,42.39,30.28,42.17z" />
+    <path
+        android:fillColor="#272626"
+        android:pathData="M38.11,98.11" />
 </vector>
