--- a/app/src/main/res/drawable/ic_send_42.xml
+++ b/app/src/main/res/drawable/ic_send_42.xml
@@ -1,5 +1,17 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="42dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="42dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M17,1.01L7,1c-1.1,0 -1.99,0.9 -1.99,2v18c0,1.1 0.89,2 1.99,2h10c1.1,0 2,-0.9 2,-2L19,3c0,-1.1 -0.9,-1.99 -2,-1.99zM17,19L7,19L7,5h10v14zM12.8,13.22v1.75l3.2,-2.99L12.8,9v1.7c-3.11,0.43 -4.35,2.56 -4.8,4.7 1.11,-1.5 2.58,-2.18 4.8,-2.18z"/>
-    
+<?xml version="1.0" encoding="utf-8"?>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="100dp"
+    android:height="100dp"
+    android:viewportWidth="100"
+    android:viewportHeight="100">
+
+    <path
+        android:fillColor="#272626"
+        android:pathData="M10.16,1.71L10.16,1.71C9.72,1.71,9.31,1.88,9,2.19C8.69,2.5,8.52,2.92,8.52,3.35v90.83 c0,0.91,0.73,1.64,1.64,1.64l82.28,0.17h0c0.43,0,0.85-0.17,1.16-0.48c0.31-0.31,0.48-0.73,0.48-1.16V3.52 c0-0.91-0.73-1.64-1.64-1.64L10.16,1.71z M90.79,92.7L11.8,92.54V5l78.99,0.16V92.7z" />
+    <path
+        android:fillColor="#272626"
+        android:pathData="M35.06,35.05c2.13,0,4.14-0.83,5.65-2.33c1.51-1.51,2.35-3.52,2.35-5.65 c0-2.14-0.82-4.15-2.33-5.66c-1.51-1.51-3.52-2.35-5.65-2.35c0,0-0.01,0-0.01,0c-4.4,0-7.99,3.58-8,7.99 c0,2.14,0.83,4.15,2.34,5.67c1.51,1.51,3.52,2.35,5.65,2.35C35.06,35.05,35.06,35.05,35.06,35.05z M30.35,27.04 c0-2.6,2.12-4.71,4.71-4.71c0,0,0.01,0,0.01,0h0c1.26,0,2.44,0.49,3.33,1.39c0.89,0.89,1.38,2.08,1.38,3.34 c0,1.26-0.49,2.44-1.39,3.33c-0.89,0.89-2.07,1.38-3.33,1.38c0,0,0,0-0.01,0c-1.26,0-2.44-0.49-3.33-1.38 C30.84,29.49,30.35,28.3,30.35,27.04z" />
+    <path
+        android:fillColor="#272626"
+        android:pathData="M19.19,72.49h64.32c0.91,0,1.64-0.74,1.64-1.64v-0.43V51.91V12.28 c0-0.91-0.74-1.64-1.64-1.64H19.1c-0.91,0-1.64,0.74-1.64,1.64v58.14c0,0.2,0.04,0.39,0.11,0.57 C17.64,71.83,18.33,72.49,19.19,72.49z M81.87,68.78v0.43H20.83V58.35l10.19-12.6L43.4,56.26c0.34,0.29,0.79,0.43,1.24,0.38 c0.45-0.05,0.86-0.28,1.13-0.64l16.84-22.1L81.87,52.6V68.78z M20.74,13.92h61.13v34.1l-18.3-17.76c-0.34-0.33-0.79-0.49-1.27-0.46 c-0.47,0.03-0.9,0.27-1.18,0.64L44.2,52.64L31.87,42.16c-0.34-0.29-0.78-0.42-1.22-0.39c-0.44,0.04-0.85,0.26-1.12,0.6l-8.79,10.87 V13.92z" />
 </vector>
