--- a/app/src/main/res/drawable/ic_tower_48.xml
+++ b/app/src/main/res/drawable/ic_tower_48.xml
@@ -1,13 +1,269 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="48dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="48dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M7.3,14.7l1.2,-1.2c-1,-1 -1.5,-2.3 -1.5,-3.5c0,-1.3 0.5,-2.6 1.5,-3.5L7.3,5.3c-1.3,1.3 -2,3 -2,4.7S6,13.4 7.3,14.7z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M19.1,2.9l-1.2,1.2c1.6,1.6 2.4,3.8 2.4,5.9c0,2.1 -0.8,4.3 -2.4,5.9l1.2,1.2c2,-2 2.9,-4.5 2.9,-7.1C22,7.4 21,4.9 19.1,2.9z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M6.1,4.1L4.9,2.9C3,4.9 2,7.4 2,10c0,2.6 1,5.1 2.9,7.1l1.2,-1.2c-1.6,-1.6 -2.4,-3.8 -2.4,-5.9C3.7,7.9 4.5,5.7 6.1,4.1z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M16.7,14.7c1.3,-1.3 2,-3 2,-4.7c-0.1,-1.7 -0.7,-3.4 -2,-4.7l-1.2,1.2c1,1 1.5,2.3 1.5,3.5c0,1.3 -0.5,2.6 -1.5,3.5L16.7,14.7z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M14.5,10c0,-1.38 -1.12,-2.5 -2.5,-2.5S9.5,8.62 9.5,10c0,0.76 0.34,1.42 0.87,1.88L7,22h2l0.67,-2h4.67L15,22h2l-3.37,-10.12C14.16,11.42 14.5,10.76 14.5,10zM10.33,18L12,13l1.67,5H10.33z"/>
-    
+<?xml version="1.0" encoding="utf-8"?>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="40dp"
+    android:height="100dp"
+    android:viewportWidth="100"
+    android:viewportHeight="250">
+
+    <path
+        android:fillColor="#DFDEDC"
+        android:pathData="M 66.89 239.01 L 32.27 239.01 L 32.79 211.49 L 33.51 174.18 L 34.26 135.01 L 34.97 97.7 L 35.72 58.52 L 36.3 28.21 L 36.48 18.88 L 62.68 18.88 L 62.86 28.21 L 63.44 58.52 L 64.19 97.7 L 64.9 135.01 L 65.65 174.18 L 66.37 211.49 Z" />
+    <path
+        android:fillColor="#ECEEED"
+        android:pathData="M 44.92 28.21 L 44.92 58.52 L 40.64 58.52 L 40.99 28.21 Z" />
+    <path
+        android:fillColor="#ECEEED"
+        android:pathData="M 44.92 97.7 L 44.92 135.01 L 39.76 135.01 L 40.19 97.7 Z" />
+    <path
+        android:fillColor="#ECEEED"
+        android:pathData="M 44.92 174.18 L 44.92 211.49 L 38.87 211.49 L 39.3 174.18 Z" />
+    <path
+        android:fillColor="#D02E2D"
+        android:pathData="M 64.19 97.7 L 34.97 97.7 L 35.72 58.52 L 63.44 58.52 Z" />
+    <path
+        android:fillColor="#D02E2D"
+        android:pathData="M 65.65 174.18 L 33.51 174.18 L 34.26 135.01 L 64.9 135.01 Z" />
+    <path
+        android:fillColor="#D02E2D"
+        android:pathData="M 66.89 239.01 L 66.89 250.67 L 32.27 250.67 L 32.27 239.01 L 32.79 211.49 L 66.37 211.49 Z" />
+    <path
+        android:fillColor="#D02E2D"
+        android:pathData="M 62.86 28.21 L 36.3 28.21 L 36.48 18.88 L 62.68 18.88 Z" />
+    <path
+        android:fillColor="#D5D4D2"
+        android:pathData="M 63.44 58.52 L 62.86 28.21 L 54.29 28.21 L 54.29 58.52 Z" />
+    <path
+        android:fillColor="#D5D4D2"
+        android:pathData="M 64.19 97.7 L 54.29 97.7 L 54.29 135.01 L 64.9 135.01 Z" />
+    <path
+        android:fillColor="#D5D4D2"
+        android:pathData="M 65.65 174.18 L 54.29 174.18 L 54.29 211.49 L 66.37 211.49 Z" />
+    <path
+        android:fillColor="#B91B1D"
+        android:pathData="M 62.86 28.21 L 54.29 28.21 L 54.29 18.88 L 62.68 18.88 Z" />
+    <path
+        android:fillColor="#B91B1D"
+        android:pathData="M 64.19 97.7 L 54.29 97.7 L 54.29 58.52 L 63.44 58.52 Z" />
+    <path
+        android:fillColor="#B91B1D"
+        android:pathData="M 65.65 174.18 L 54.29 174.18 L 54.29 135.01 L 64.9 135.01 Z" />
+    <path
+        android:fillColor="#B91B1D"
+        android:pathData="M 66.89 250.67 L 54.29 250.67 L 54.29 211.49 L 66.37 211.49 Z" />
+    <path
+        android:fillColor="#EF7B7C"
+        android:pathData="M 44.92 18.88 L 44.92 28.21 L 40.99 28.21 L 41.05 18.88 Z" />
+    <path
+        android:fillColor="#EF7B7C"
+        android:pathData="M 44.92 58.52 L 44.92 97.7 L 40.19 97.7 L 40.64 58.52 Z" />
+    <path
+        android:fillColor="#EF7B7C"
+        android:pathData="M 44.92 135.01 L 44.92 174.18 L 39.3 174.18 L 39.76 135.01 Z" />
+    <path
+        android:fillColor="#EF7B7C"
+        android:pathData="M 44.92 211.49 L 44.92 250.67 L 38.42 250.67 L 38.87 211.49 Z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M80.82,165.92H17.51c-0.43,0-0.79-0.35-0.79-0.79s0.35-0.79,0.79-0.79h63.31c0.43,0,0.79,0.35,0.79,0.79 S81.26,165.92,80.82,165.92z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M42.99,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52c0.29,0,0.52,0.23,0.52,0.52 v9.78C43.51,175.21,43.28,175.44,42.99,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M55.6,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52c0.29,0,0.52,0.23,0.52,0.52v9.78 C56.12,175.21,55.89,175.44,55.6,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M17.76,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52s0.52,0.23,0.52,0.52v9.78 C18.29,175.21,18.05,175.44,17.76,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M30.38,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52c0.29,0,0.52,0.23,0.52,0.52 v9.78C30.9,175.21,30.67,175.44,30.38,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M68.21,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52c0.29,0,0.52,0.23,0.52,0.52 v9.78C68.74,175.21,68.5,175.44,68.21,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M80.82,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52c0.29,0,0.52,0.23,0.52,0.52 v9.78C81.35,175.21,81.11,175.44,80.82,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M49.29,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52c0.29,0,0.52,0.23,0.52,0.52 v9.78C49.82,175.21,49.58,175.44,49.29,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M61.91,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52c0.29,0,0.52,0.23,0.52,0.52 v9.78C62.43,175.21,62.2,175.44,61.91,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M24.07,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52s0.52,0.23,0.52,0.52v9.78 C24.59,175.21,24.36,175.44,24.07,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M36.68,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52c0.29,0,0.52,0.23,0.52,0.52 v9.78C37.21,175.21,36.97,175.44,36.68,175.44z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M74.52,175.44c-0.29,0-0.52-0.23-0.52-0.52v-9.78c0-0.29,0.23-0.52,0.52-0.52c0.29,0,0.52,0.23,0.52,0.52 v9.78C75.04,175.21,74.81,175.44,74.52,175.44z" />
+    <path
+        android:fillColor="#DFDEDC"
+        android:pathData="M 17.25 171.84 H 81.36 V 187.93 H 17.25 V 171.84 Z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M82.1,184.02H16.23c-0.4,0-0.72-0.32-0.72-0.72c0-0.4,0.32-0.72,0.72-0.72H82.1c0.4,0,0.72,0.32,0.72,0.72 C82.82,183.69,82.5,184.02,82.1,184.02z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M42.74,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43c0.24,0,0.43,0.19,0.43,0.43 v4.64C43.17,188.17,42.98,188.37,42.74,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M55.86,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43c0.24,0,0.43,0.19,0.43,0.43 v4.64C56.29,188.17,56.1,188.37,55.86,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M16.5,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43s0.43,0.19,0.43,0.43v4.64 C16.93,188.17,16.74,188.37,16.5,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M29.62,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43s0.43,0.19,0.43,0.43v4.64 C30.05,188.17,29.86,188.37,29.62,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M68.98,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43c0.24,0,0.43,0.19,0.43,0.43 v4.64C69.41,188.17,69.22,188.37,68.98,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M82.1,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43s0.43,0.19,0.43,0.43v4.64 C82.53,188.17,82.34,188.37,82.1,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M49.3,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43c0.24,0,0.43,0.19,0.43,0.43v4.64 C49.73,188.17,49.54,188.37,49.3,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M62.42,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43s0.43,0.19,0.43,0.43v4.64 C62.85,188.17,62.66,188.37,62.42,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M23.06,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43c0.24,0,0.43,0.19,0.43,0.43 v4.64C23.49,188.17,23.3,188.37,23.06,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M36.18,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43c0.24,0,0.43,0.19,0.43,0.43 v4.64C36.61,188.17,36.42,188.37,36.18,188.37z" />
+    <path
+        android:fillColor="#6A6A6A"
+        android:pathData="M75.54,188.37c-0.24,0-0.43-0.19-0.43-0.43v-4.64c0-0.24,0.19-0.43,0.43-0.43c0.24,0,0.43,0.19,0.43,0.43 v4.64C75.97,188.17,75.78,188.37,75.54,188.37z" />
+    <path
+        android:fillColor="#B1B0AE"
+        android:pathData="M 21.94 176.55 H 24.07 V 181.25 H 21.94 V 176.55 Z" />
+    <path
+        android:fillColor="#B1B0AE"
+        android:pathData="M 30.38 176.55 H 32.86 V 181.25 H 30.38 V 176.55 Z" />
+    <path
+        android:fillColor="#B1B0AE"
+        android:pathData="M 38.96 176.55 H 41.64 V 181.25 H 38.96 V 176.55 Z" />
+    <path
+        android:fillColor="#B1B0AE"
+        android:pathData="M 47.62 176.55 H 50.74 V 181.25 H 47.62 V 176.55 Z" />
+    <path
+        android:fillColor="#B1B0AE"
+        android:pathData="M 56.72 176.55 H 59.39 V 181.25 H 56.72 V 176.55 Z" />
+    <path
+        android:fillColor="#B1B0AE"
+        android:pathData="M 65.51 176.55 H 67.99 V 181.25 H 65.51 V 176.55 Z" />
+    <path
+        android:fillColor="#B1B0AE"
+        android:pathData="M 74.29 176.55 H 76.37 V 181.25 H 74.29 V 176.55 Z" />
+    <path
+        android:fillColor="#B1B0AE"
+        android:pathData="M 16.01 187.93 L 16.01 189.3 L 33.82 192.02 L 64.8 192.02 L 82.61 189.3 L 82.61 187.93 Z" />
+    <path
+        android:fillColor="#939D95"
+        android:pathData="M33.92,66.19c-0.37,0-0.67-0.3-0.67-0.67v-29.4c0-0.37,0.3-0.67,0.67-0.67s0.67,0.3,0.67,0.67v29.4 C34.59,65.89,34.29,66.19,33.92,66.19z" />
+    <path
+        android:fillColor="#939D95"
+        android:pathData="M65.05,66.19c-0.37,0-0.67-0.3-0.67-0.67v-29.4c0-0.37,0.3-0.67,0.67-0.67c0.37,0,0.67,0.3,0.67,0.67v29.4 C65.72,65.89,65.42,66.19,65.05,66.19z" />
+    <path
+        android:fillColor="#6E7670"
+        android:pathData="M69.96,36.76c-0.02,0-0.05,0-0.07,0l-20.43-2.3c-0.35-0.04-0.6-0.35-0.56-0.7c0.04-0.35,0.36-0.6,0.7-0.56 l20.43,2.3c0.35,0.04,0.6,0.35,0.56,0.7C70.56,36.52,70.28,36.76,69.96,36.76z" />
+    <path
+        android:fillColor="#6E7670"
+        android:pathData="M29.1,36.76c-0.32,0-0.6-0.24-0.63-0.57c-0.04-0.35,0.21-0.67,0.56-0.7l20.43-2.3 c0.35-0.04,0.67,0.21,0.7,0.56c0.04,0.35-0.21,0.67-0.56,0.7l-20.43,2.3C29.15,36.76,29.12,36.76,29.1,36.76z" />
+    <path
+        android:fillColor="#6E7670"
+        android:pathData="M49.53,58.58H29.62c-0.38,0-0.69-0.31-0.69-0.69c0-0.38,0.31-0.69,0.69-0.69h19.92 c0.38,0,0.69,0.31,0.69,0.69C50.22,58.27,49.91,58.58,49.53,58.58z" />
+    <path
+        android:fillColor="#6E7670"
+        android:pathData="M69.45,58.58H49.53c-0.38,0-0.69-0.31-0.69-0.69c0-0.38,0.31-0.69,0.69-0.69h19.92 c0.38,0,0.69,0.31,0.69,0.69C70.14,58.27,69.83,58.58,69.45,58.58z" />
+    <path
+        android:fillColor="#939D95"
+        android:pathData="M49.34,67.85c-0.37,0-0.67-0.3-0.67-0.67V36.13c0-0.37,0.3-0.67,0.67-0.67c0.37,0,0.67,0.3,0.67,0.67v31.06 C50.01,67.55,49.71,67.85,49.34,67.85z" />
+    <path
+        android:fillColor="#979797"
+        android:pathData="M49.41,60.59L49.41,60.59c-2.24,0-4.05-1.81-4.05-4.05V36.07c0-2.24,1.81-4.05,4.05-4.05h0 c2.24,0,4.05,1.81,4.05,4.05v20.47C53.47,58.77,51.65,60.59,49.41,60.59z" />
+    <path
+        android:fillColor="#BDBDBC"
+        android:pathData="M49.41,60.59L49.41,60.59c-1.39,0-2.51-1.13-2.51-2.51V34.53c0-1.39,1.13-2.51,2.51-2.51h0 c1.39,0,2.51,1.13,2.51,2.51v23.54C51.93,59.46,50.8,60.59,49.41,60.59z" />
+    <path
+        android:fillColor="#979797"
+        android:pathData="M30.39,60.59L30.39,60.59c0.96,0,1.75-0.78,1.75-1.75V33.77c0-0.96-0.78-1.75-1.75-1.75h-0.96 c-0.43,0-0.78,0.35-0.78,0.78v26.04C28.65,59.81,29.43,60.59,30.39,60.59z" />
+    <path
+        android:fillColor="#BDBDBC"
+        android:pathData="M29.2,60.59L29.2,60.59c0.7,0,1.26-0.56,1.26-1.26V33.28c0-0.7-0.56-1.26-1.26-1.26h0 c-0.7,0-1.26,0.56-1.26,1.26v26.05C27.94,60.02,28.5,60.59,29.2,60.59z" />
+    <path
+        android:fillColor="#979797"
+        android:pathData="M68.77,60.59L68.77,60.59c-0.96,0-1.75-0.78-1.75-1.75V33.77c0-0.96,0.78-1.75,1.75-1.75h0.96 c0.43,0,0.78,0.35,0.78,0.78v26.04C70.51,59.81,69.73,60.59,68.77,60.59z" />
+    <path
+        android:fillColor="#BDBDBC"
+        android:pathData="M69.96,60.59L69.96,60.59c-0.7,0-1.26-0.56-1.26-1.26V33.28c0-0.7,0.56-1.26,1.26-1.26h0 c0.7,0,1.26,0.56,1.26,1.26v26.05C71.22,60.02,70.66,60.59,69.96,60.59z" />
+    <path
+        android:fillColor="#D5D5D4"
+        android:pathData="M 59.97 2.34 C 67.0281991028 2.34 72.75 8.06180089716 72.75 15.12 C 72.75 22.1781991028 67.0281991028 27.9 59.97 27.9 C 52.9118008972 27.9 47.19 22.1781991028 47.19 15.12 C 47.19 8.06180089716 52.9118008972 2.34 59.97 2.34 Z" />
+    <path
+        android:fillColor="#878787"
+        android:pathData="M67.42,4.74c2.48,2.33,4.03,5.64,4.03,9.31c0,7.06-5.72,12.78-12.78,12.78c-2.78,0-5.35-0.89-7.45-2.4 c2.29,2.15,5.36,3.47,8.75,3.47c7.06,0,12.78-5.72,12.78-12.78C72.74,10.84,70.64,7.06,67.42,4.74z" />
+    <path
+        android:fillColor="#B0B0B0"
+        android:pathData="M 57.06 4.13 C 62.4944819383 4.13 66.9 7.60874749381 66.9 11.9 C 66.9 16.1912525062 62.4944819383 19.67 57.06 19.67 C 51.6255180617 19.67 47.22 16.1912525062 47.22 11.9 C 47.22 7.60874749381 51.6255180617 4.13 57.06 4.13 Z" />
+    <path
+        android:fillColor="#D5D5D4"
+        android:pathData="M 34.97 71.96 C 38.5101452464 71.96 41.38 74.8298547536 41.38 78.37 C 41.38 81.9101452464 38.5101452464 84.78 34.97 84.78 C 31.4298547536 84.78 28.56 81.9101452464 28.56 78.37 C 28.56 74.8298547536 31.4298547536 71.96 34.97 71.96 Z" />
+    <path
+        android:fillColor="#878787"
+        android:pathData="M31.24,73.17c-1.24,1.17-2.02,2.83-2.02,4.67c0,3.54,2.87,6.41,6.41,6.41c1.39,0,2.68-0.45,3.74-1.2 c-1.15,1.08-2.69,1.74-4.38,1.74c-3.54,0-6.41-2.87-6.41-6.41C28.57,76.23,29.62,74.33,31.24,73.17z" />
+    <path
+        android:fillColor="#B0B0B0"
+        android:pathData="M 36.43 71.83 C 38.5783876768 71.83 40.32 74.0372361833 40.32 76.76 C 40.32 79.4827638167 38.5783876768 81.69 36.43 81.69 C 34.2816123232 81.69 32.54 79.4827638167 32.54 76.76 C 32.54 74.0372361833 34.2816123232 71.83 36.43 71.83 Z" />
+    <path
+        android:fillColor="#6E7670"
+        android:pathData="M73.04,99.73c-0.02,0-0.05,0-0.07,0l-23.22-2.61c-0.35-0.04-0.6-0.35-0.56-0.7c0.04-0.35,0.36-0.6,0.7-0.56 l23.22,2.61c0.35,0.04,0.6,0.35,0.56,0.7C73.64,99.49,73.36,99.73,73.04,99.73z" />
+    <path
+        android:fillColor="#6E7670"
+        android:pathData="M26.6,99.73c-0.32,0-0.6-0.24-0.63-0.57c-0.04-0.35,0.21-0.67,0.56-0.7l23.22-2.61 c0.35-0.04,0.67,0.21,0.7,0.56c0.04,0.35-0.21,0.67-0.56,0.7l-23.22,2.61C26.65,99.73,26.62,99.73,26.6,99.73z" />
+    <path
+        android:fillColor="#6E7670"
+        android:pathData="M49.82,124.52H27.19c-0.38,0-0.69-0.31-0.69-0.69c0-0.38,0.31-0.69,0.69-0.69h22.63 c0.38,0,0.69,0.31,0.69,0.69C50.51,124.21,50.2,124.52,49.82,124.52z" />
+    <path
+        android:fillColor="#6E7670"
+        android:pathData="M72.46,124.52H49.82c-0.38,0-0.69-0.31-0.69-0.69c0-0.38,0.31-0.69,0.69-0.69h22.63 c0.38,0,0.69,0.31,0.69,0.69C73.15,124.21,72.84,124.52,72.46,124.52z" />
+    <path
+        android:fillColor="#939D95"
+        android:pathData="M57.4,139.18c-0.24,0-0.43-0.19-0.43-0.43V94.68c0-0.24,0.19-0.43,0.43-0.43c0.24,0,0.43,0.19,0.43,0.43 v44.07C57.83,138.99,57.64,139.18,57.4,139.18z" />
+    <path
+        android:fillColor="#979797"
+        android:pathData="M57.4,131.67L57.4,131.67c-2.58,0-4.67-2.09-4.67-4.67V95.81c0-2.58,2.09-4.67,4.67-4.67h0 c2.58,0,4.67,2.09,4.67,4.67V127C62.07,129.58,59.98,131.67,57.4,131.67z" />
+    <path
+        android:fillColor="#BDBDBC"
+        android:pathData="M57.4,131.67L57.4,131.67c-1.6,0-2.9-1.3-2.9-2.9V94.04c0-1.6,1.3-2.9,2.9-2.9h0c1.6,0,2.9,1.3,2.9,2.9 v34.74C60.29,130.38,59,131.67,57.4,131.67z" />
+    <path
+        android:fillColor="#939D95"
+        android:pathData="M40.55,139.18c-0.24,0-0.43-0.19-0.43-0.43V94.68c0-0.24,0.19-0.43,0.43-0.43c0.24,0,0.43,0.19,0.43,0.43 v44.07C40.98,138.99,40.79,139.18,40.55,139.18z" />
+    <path
+        android:fillColor="#979797"
+        android:pathData="M40.55,131.67L40.55,131.67c-2.58,0-4.67-2.09-4.67-4.67V95.81c0-2.58,2.09-4.67,4.67-4.67h0 c2.58,0,4.67,2.09,4.67,4.67V127C45.22,129.58,43.13,131.67,40.55,131.67z" />
+    <path
+        android:fillColor="#BDBDBC"
+        android:pathData="M40.55,131.67L40.55,131.67c-1.6,0-2.9-1.3-2.9-2.9V94.04c0-1.6,1.3-2.9,2.9-2.9h0c1.6,0,2.9,1.3,2.9,2.9 v34.74C43.45,130.38,42.15,131.67,40.55,131.67z" />
+    <path
+        android:fillColor="#ABB8AE"
+        android:pathData="M28.17,140.61c-0.24,0-0.43-0.19-0.43-0.43V96.11c0-0.24,0.19-0.43,0.43-0.43s0.43,0.19,0.43,0.43v44.07 C28.6,140.42,28.41,140.61,28.17,140.61z" />
+    <path
+        android:fillColor="#979797"
+        android:pathData="M25.68,131.67L25.68,131.67c-2.09,0-3.79-1.7-3.79-3.79V94.93c0-2.09,1.7-3.79,3.79-3.79h0 c2.09,0,3.79,1.7,3.79,3.79v32.95C29.48,129.98,27.78,131.67,25.68,131.67z" />
+    <path
+        android:fillColor="#BDBDBC"
+        android:pathData="M24.91,131.67h-0.2c-1.55,0-2.81-1.26-2.81-2.81V94.12c0-1.64,1.33-2.98,2.98-2.98h0 c1.56,0,2.82,1.26,2.82,2.82v34.93C27.69,130.43,26.44,131.67,24.91,131.67z" />
+    <path
+        android:fillColor="#ABB8AE"
+        android:pathData="M70.12,140.61c-0.24,0-0.43-0.19-0.43-0.43V96.11c0-0.24,0.19-0.43,0.43-0.43s0.43,0.19,0.43,0.43v44.07 C70.55,140.42,70.36,140.61,70.12,140.61z" />
+    <path
+        android:fillColor="#979797"
+        android:pathData="M72.43,131.67L72.43,131.67c2.09,0,3.79-1.7,3.79-3.79V94.93c0-2.09-1.7-3.79-3.79-3.79h0 c-2.09,0-3.79,1.7-3.79,3.79v32.95C68.64,129.98,70.34,131.67,72.43,131.67z" />
+    <path
+        android:fillColor="#BDBDBC"
+        android:pathData="M73.21,131.67h0.2c1.55,0,2.81-1.26,2.81-2.81V94.12c0-1.64-1.33-2.98-2.98-2.98h0 c-1.56,0-2.82,1.26-2.82,2.82v34.93C70.43,130.43,71.68,131.67,73.21,131.67z" />
 </vector>
