--- a/app/src/main/res/layout-land/dialog_add_polygon.xml
+++ b/app/src/main/res/layout-land/dialog_add_polygon.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:padding="16dp">
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/twTitulo"
-        android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Adicionar ERB e Azimute"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        android:layout_weight="7"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Adicionar ERB e Azimute"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilLatitude"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/latitude"
-        app:layout_constraintTop_toBottomOf="@id/twTitulo">
+        android:hint="@string/latitude">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etLatitude"
@@ -34,8 +38,7 @@
         android:id="@+id/tilLongitude"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/longitude"
-        app:layout_constraintTop_toBottomOf="@id/tilLatitude">
+        android:hint="@string/longitude">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etLongitude"
@@ -49,8 +52,7 @@
         android:id="@+id/tilAzimute"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/azimute"
-        app:layout_constraintTop_toBottomOf="@id/tilLongitude">
+        android:hint="@string/azimute">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etAzimute"
@@ -64,8 +66,7 @@
         android:id="@+id/tilRaio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/raio"
-        app:layout_constraintTop_toBottomOf="@id/tilAzimute">
+        android:hint="@string/raio">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etRaio"
@@ -74,26 +75,30 @@
             android:inputType="number" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:text="Cancelar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tilRaio" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:text="Adicionar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tilRaio" />
+</LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="130dp"
+            android:layout_marginBottom="32dp"
+            android:text="Cancelar" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Adicionar" />
+
+    </LinearLayout>
+
+</LinearLayout>
